test/errors/e64.gm
Procedure test_map_set_element(G:Graph)
{
	Map<Int, Node> map;
	map[0] = 23; //type mismatch for value
}
